--- a/Index.html
+++ b/Index.html
@@ -3,74 +3,8 @@
 <head>
 	<title>About - Omin Kingsley</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-	<style>
-		@font-face {
-		  font-family: SFProText-bold;
-		  src: url("../fonts/SF-Pro-Text-Bold.woff");
-		}
 
-		@font-face {
-		  font-family: SFProText;
-		  src: url("../fonts/SF-Pro-Text-Regular.otf");
-		}
-
-		body {
-			padding: 0px;
-		}
-
-		.side-bar {
-			width: 460px;
-			height: 728px;
-			left: 0px;
-			top: 0px;
-			background: rgba(199, 212, 226, 0.75);
-		}
-
-		.avatar-img {
-			margin: 113px 128px 0px 128px;
-			width: 205px;
-			height: 205px;
-		}
-
-		ul {
-		  list-style-type: none;
-		  margin: 39px auto 47px auto;
-		  padding: 0;
-		  text-align: center;
-		}
-
-		li {
-			font-family: SF Pro Text;
-			font-style: normal;
-			font-weight: normal;
-			font-size: 16px;
-			line-height: normal;
-			text-align: center;
-			padding: 8px 19px;
-			margin-left: 17px;
-			border: 1px solid #333333;
-			box-sizing: border-box;
-			border-radius: 33px;
-
-			display: inline-block;
-		}
-
-		hr {
-			width: 173px;
-			border: 1px solid #333333;
-			border-radius: 55px;
-		}
-
-		.icon-center {
-		  display: block;
-		  margin-left: auto;
-		  margin-right: auto;
-		  width: 50%;
-		  height: 28px;
-		}
-
-	</style>
-</head>
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 <body>
 
 
@@ -78,15 +12,22 @@
 		<div class="side-bar">
 			<img src="assets/image/Rectangle.png" alt="student-img" class="avatar-img">
 			<ul>
-				<li>About</li>
-				<li>Blog</li>
-				<li>Project</li>
+				<a href="#"><li>About</li></a>
+				<a href="#"><li>Blog</li></a>
+				<a href="#"><li>Project</li></a>
 			</ul>
 
 			<hr>
 
 			<img src="assets/icon/group-256.svg" class="icon-center">
 		</div>
+
+		<div class="txt-body">
+		  <h2>Hello I’m Kingsley Omin</h2>
+		  <p>A product Designer with deep understanding of the principle of user experience (UX), visual aesthetics and versed in designing for different platforms.</p>
+		  
+		</div>
+
 	</div>
 
 
